# octo-clicker

./: .gitignore  Cargo.toml  build.rs  index.html
src/: app.rs  lib.rs  main.rs
src/fakerinput/: mod.rs  mouse_report.rs
