[package]
name = "eframe_template"
version = "0.1.0"
edition = "2021"

[dependencies]
bsod = "*"
egui = "0.20.0"
eframe = { version = "0.20.0", default-dependencies = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rand = "0.8.5"
tracing-subscriber = "0.3"
# You only need serde if you want app persistence:
serde = { version = "1.0", features = ["derive"] }
hotkey = "0.3.1"
# # Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
